--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="back_button_description">뒤로 가기</string>
     <string name="next_button_description">다음 단계</string>
     <string name="send_button_description">인증번호 전송</string>
+    <string name="pic2_description">Select profile picture</string>
 </resources>
