--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
     <string name="back_button_description">뒤로 가기</string>
     <string name="next_button_description">다음 단계</string>
     <string name="send_button_description">인증번호 전송</string>
-    <string name="pic2_description">Select profile picture</string>
+    <string name="pic2_description">프로필 사진 고르기</string>
+    <string name="login_button_description">로그인버튼</string>
+    <string name="google_login_button_description">구글 로그인 버튼</string>
+    <string name="submit_button">구글 로그인 버튼</string>
 </resources>
