--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="login_button_description">로그인버튼</string>
     <string name="google_login_button_description">구글 로그인 버튼</string>
     <string name="submit_button">구글 로그인 버튼</string>
+    <string name="signup_text">가입하기</string>
 </resources>
