UI: 피드백 뱐영 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
     <string name="google_login_button_description">구글 로그인 버튼</string>
     <string name="submit_button">구글 로그인 버튼</string>
     <string name="web_client_id">157724603423-bvvdb2crs63d4lpd8n44uqd4nqi6m3i5.apps.googleusercontent.com</string>
-    <string name="signup_text">가입하기</string>
+<!--    <string name="signup_text">가입하기</string>-->
 </resources>
